# table-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
batch_tasks/: example_batch.yaml
examples/: example_usage.py
scripts/: run_bench.py  scan_requests.py
skills/classify_data/: SKILL.md
skills/evaluate_request/: SKILL.md
skills/extract_table/: SKILL.md
src/table_agent/: __init__.py  agent.py  batch.py  config.py  llm.py  main.py  models.py
src/table_agent/bench/: comparator.py  dataset.py  models.py  report.py  runner.py
src/table_agent/parsers/: __init__.py  document.py  video.py
src/table_agent/react/: agent.py  executor.py  models.py  prompts.py  renderer.py  tracer.py
src/table_agent/skills/: __init__.py  executor.py  loader.py  router.py
